# Astronomia-Beats

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  requirements.txt  run.py
config/: __init__.py  build.py  config.py  en.json  pyproject.toml  setup.py  update_dockerfile.py  utils.py
config/cookies/: cookies.txt
musicbot/: __main__.py  audiocontroller.py  bot.py  linkutils.py  loader.py  playlist.py  settings.py  songinfo.py  utils.py
musicbot/commands/: general.py  music.py
musicbot/plugins/: button.py
