[build-system]
requires = [
   "setuptools",
   "wheel",
   "tomli; python_version<'3.11'",
   "json-with-comments==1.2.2",
]

[project]
name = "MusicBot-DB"
description = "Package that installs DB library and jsonc as dependencies"
version = "0.0.2"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "db.txt"}
